--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <title>Google</title>
 </head>
@@ -14,7 +14,7 @@
         <img id="products" src="images/products.png" />
         <img id="bell" src="images/bell.png" />
         <img id="share" src="images/share.png" />
-        <img id="abin" class="headerpics" src="DSC_0081_2.JPG" width="35" />
+        <img id="abin" class="headerpics" src="images/DSC_0081_2.JPG" width="32" />
     </header>
     <div>
         <img src="https://www.google.com/images/srpr/logo11w.png" />
