--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
     <title>Google</title>
 </head>
