--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
         <img id="abin" class="headerpics" src="images/DSC_0081_2.JPG" width="32" />
     </header>
     <div>
-        <img src="https://www.google.com/images/srpr/logo11w.png" />
+        <img src="images/googlelogo_color_272x92dp.png" />
         <form name="google" action="#" method="POST"><br>
             <input type="search" class="search"><br>
             <input type="submit" class="button" name="submit" value="Google Search">
             <input type="submit" class="button" name="lucky" value="I'm Feeling Lucky">
         </form>
     </div>
+
     <footer>
-        <a class="leftlinks" href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a>
-        <a class="leftlinks" href="https://www.google.com/services/?fg=1">Business</a>
-        <a class="leftlinks" href="https://www.google.com/intl/en/about/">About</a>
-        <a class="rightlinks" href="https://www.google.com/preferences?hl=en">Settings</a>
-        <a class="rightlinks" href="https://www.google.com/intl/en/policies/?fg=1">Privacy & Terms</a>
+        <a class="left" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjVnpSJmYzmAhV6IbcAHYAqCKUQkdQCCBw&url=https%3A%2F%2Fwww.google.com%2Fintl%2Fen_in%2Fads%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&usg=AOvVaw3Oj62V1xNd5oAI6Vxou5Lx">Advertising</a>
+        <a class="left" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjVnpSJmYzmAhV6IbcAHYAqCKUQktQCCB0&url=https%3A%2F%2Fwww.google.com%2Fservices%2F%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&usg=AOvVaw2SJ4zwRVXKyZr53qG9dm4K">Business</a>
+        <a class="left" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwjVnpSJmYzmAhV6IbcAHYAqCKUQkNQCCB4&url=https%3A%2F%2Fabout.google%2F%3Futm_source%3Dgoogle-IN%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&usg=AOvVaw33zjaJZ_ogw8iPEm4kPGYh">About</a>
+        <a class="left" href="https://google.com/search/howsearchworks/?fg=1">How Search Works</a>
+        <a class="right" href="https://www.google.com/intl/en/policies/?fg=1">Privacy</a>
+        <a class="right" href="https://www.google.com/intl/en/policies/?fg=1">Terms</a>
+        <a class="right" href="https://www.google.com/preferences?hl=en">Settings</a>
+
     </footer>
 
 </body>
